# hpsilab-mcp-server

./: .gitignore  README.md  glama.json  pyproject.toml
examples/: Quant Finance MCP - hpsilab.ipynb  cursor_config.json
src/hpsilab_mcp_server/: server.py
