[project]
name = "hpsilab-mcp-server"
version = "0.1.0"
description = "HPSILab MCP Server"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.28.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0"
]

[project.scripts]
hpsilab-mcp-server = "hpsilab_mcp.server:main"